# papers-summary

./: .env.example  .gitignore  README.md  arxiv_llm_summarizer.py  compose-base.yml  compose.yml  dev-setup.sh  main.py  pyproject.toml  setup.sh
arxiv-crawler/: .env.example  .gitignore  Dockerfile  compose.yml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  compose.yml  main.py  pyproject.toml
backend/src/: config.py  dependencies.py  main.py
backend/src/core/: authentication.py  base_response.py  exception_model.py
backend/src/database/: db.py
backend/src/database/models/: __init__.py  favorite_paper.py  follow_topic.py  paper.py  topic.py  topic_paper_link.py  user.py
backend/src/dto/: auth_dto.py  user_dto.py
backend/src/routes/auth/: login_route.py  logout_route.py
backend/src/routes/favorite/: __init__.py  favorite_routes.py  get_papers_favorite_route.py  remove_paper_favorite_route.py
backend/src/routes/paper/: __init__.py  get_paper_route.py  get_papers_route.py  paper_routes.py
backend/src/routes/topic/: __init__.py  follow_topic_route.py  get_followed_topics_route.py  get_topics_route.py  topic_routes.py  unfollow_topic_route.py
backend/src/routes/user/: create_user_route.py  current_user_route.py  user_routes.py
backend/src/services/: dependencies.py
backend/src/services/auth/: auth_service.py
backend/src/services/paper/: paper_service.py
backend/src/services/topic/: topic_service.py
backend/src/services/user/: user_service.py
front-end/: .env.example  compose.yml
frontend/: .env.example  Dockerfile  compose.yml  (+4 more)
(+63 files in other folders)
