[project]
name = "nmcnpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
]
