[project]
name = "nmcnpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "fastapi-pagination>=0.15.12",
    "fastapi[standard]>=0.136.1",
    "google-genai>=1.75.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "psycopg2>=2.9.12",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "sqlmodel>=0.0.38",
]
